--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@
 
 VITE_FIREBASE_API_KEY=AIzaSyCoimPMB-lv1f7w99tyGeNEnyPsG9FFffo
 VITE_FIREBASE_AUTH_DOMAIN=e-wolves.firebaseapp.com
-VITE_FIREBASE_DATABASE_URL=https://e-wolves.firebaseio.com
+VITE_FIREBASE_DATABASE_URL=https://e-wolves-default-rtdb.europe-west1.firebasedatabase.app/
 VITE_FIREBASE_PROJECT_ID=e-wolves
 VITE_FIREBASE_STORAGE_BUCKET=e-wolves.firebasestorage.app
 VITE_FIREBASE_MESSAGING_SENDER_ID=380506821035
